add basic API routes
